# unclad

./: Cargo.toml  README.md
.cargo/: config.toml
apic/: Cargo.toml
apic/src/: consts.rs  lib.rs
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  ap_boot.s  main.rs  memory.rs  multicore.rs  stack.rs  x86_ext.rs
src/: main.rs
