[package]
name = "kernel"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "*"
vga = "0.2.9"
x86_64 = "0.15.2"
bitflags = { version = "2.9.0", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
bootloader-x86_64-common = "0.11.4"
log = { version = "0.4.17", default-features = false }
acpi = "5.2.0"
embedded-alloc = "0.6.0"
buddy_system_allocator = "0.11.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
